	PR tree-optimization/70725 	* tree-if-conv.c (is_false_predicate): New function. 	(predicate_mem_writes): Use it.

* gcc.dg/pr70725.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-6-branch@235252 138bc75d-0d04-0410-961f-82ee72b054a4